@@ -34,9 +34,9 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     Sccsid: @(#)nail.1	2.272 (gritter) 11/5/04
+.\"     Sccsid: @(#)nail.1	2.273 (gritter) 11/6/04
 .\"
-.TH NAIL 1 "11/5/04" "nail 11.15" "User Commands"
+.TH NAIL 1 "11/6/04" "nail 11.15" "User Commands"
 .SH NAME
 nail \- send and receive Internet mail
 .SH SYNOPSIS
@@ -4519,14 +4519,27 @@ The `newmail' command and the `newmail' variable
 have no effect.
 It is not possible to rename or to remove POP3 mailboxes.
 .PP
-An unencrypted IMAP or POP3 message download
-can be interrupted from the terminal,
-but the part that was not downloaded
-will have to be downloaded
-before the next command is sent.
-A SSL/TLS encrypted IMAP or POP3 message download
-should not be interrupted,
-as this will very likely cause an error in the SSL transport.
+If a
+.SM RUBOUT
+(interrupt) is typed while an IMAP or POP3 operation is in progress,
+.I nail
+will wait until the operation can be safely aborted,
+and will then return to the command loop
+and print the prompt again.
+When a second
+.I RUBOUT
+is typed while
+.I nail
+is waiting for the operation to complete,
+the operation itself will be canceled.
+In this case,
+data that has not been fetched yet
+will have to be fetched
+before the next command can be performed.
+If the canceled operation
+was using an SSL/TLS encrypted channel,
+an error in the SSL transport will very likely result,
+and the connection is no longer usable.
 .PP
 As \fInail\fR is a mail user agent,
 it provides only basic SMTP services.
